# ZERO-Starting-AI-Planning-in-PDDL-Descripted-World

./: .gitignore  404.html  Conda-build.bat  Conda-serve.bat  README.md  commitandmkdocspublish.sh  hereConda.bat  index.html  mkdocs.yml  requirements.txt  search.html  sitemap.xml  例解FOND+CNF.md
.github/workflows/: deploy.yml
FurtherMore/PDDL-Solver2AST/: index.html
FurtherMore/TransitionSystemModelCheck/: index.html
PRP_planner-for-relevant-policies/: DrawDotPolicy.py  PrintHuman_Policy.sh  RunPRPForCurDomain.sh  runAllDemos.sh  usage_README.md  utils.py
code/: PDDLSolvers - Filestree.txt
docs/: index.md
domains/: Planning Domains-Problems Repository.url
js/: browser-polyfill.min.js  flow-loader.js  flowchart.min.js  sequence-loader.js  umlconvert.js
references/: PDDL-STRIPS - Shortcut.lnk
search/: search_index.json
site/: 404.html  index.html  search.html  sitemap.xml
solvers/: PDDLSolvers - Shortcut.lnk  ff
src/: INSTALL.md  README.md  README.zh.md  main.py  pyproject.toml
src/_patches/: injector.py
src/artifacts/: bnn_best.pt  relational_encoder.pt  summary.json
src/domains/blocks_clear/: low_blocks_clear_d.pddl  low_blocks_clear_p1.pddl
src/policies/block_clear/: fond_blocks_clear.dot  fond_blocks_clear_human_policy.out  fond_blocks_clear_policy.out
src/policy4fondrl2bnn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/src/: __init__.py  blocks_clear_env.py  bnn.py  dqn.py  equivalence.py  feature_extractor.py  mdp_solver.py  policy_exporter.py  state_enumerator.py  tabular_q.py
src/tests/: test_pipeline.py
(+324 files in other folders)
